[package]
edition = "2021"
name = "etc-csv-napi"
version = "0.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.94"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.16.13", default-features = false, features = [
  "async",
  "napi4",
] }
napi-derive = "2.16.13"
polars = { version = "0.45.1", features = ["lazy", "serde"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["rt", "fs"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
